--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
 DATABASE_URL="mongodb+srv://muhammad:muhammad@cluster1.6qxdymw.mongodb.net/test"
+NEXTAUTH_SECRET = "NEXTAUTH_SECRET"
+
+
+GOOGLE_CLIENT_ID=141464894324-bisl7sg7q0rmgacjqnjo131f5stlrl7d.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
